Fixed content too large on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,6 +13,7 @@
 }
 
 @media only screen and (max-width: 950px) {
+  
   #kiwiki h1 {
     font-size: 1.9rem;
   }
@@ -139,7 +140,9 @@
     margin-left: 0;
     margin-right: 0;
     order: 2;
+    min-width: 100%;
   }
+  
   #kiwiki #dokuwiki__site #dokuwiki__content__wrapper {
     width: 100%;
     max-width: initial;
@@ -147,11 +150,12 @@
     flex-wrap: wrap;
   }
   #kiwiki #dokuwiki__content > .group {
-    margin-left: 0;
+    margin: 0;
     padding: 0;
   }
   #kiwiki #dokuwiki__content > .group > .page.group {
     padding: 15px;
+    position: relative;
   }
   #kiwiki #dokuwiki__content ul {
     padding: 0 0 0 20px;
@@ -248,12 +252,18 @@
   #dokuwiki__right_before{
     width: 100%;
     justify-content: center;
+    padding-right: 0;
   }
 
   /*Main Menu*/
   .kiwiki-main-menu__wrapper #kiwiki-main-menu__close {
     top: 5px;
     left:-18px;
+  }
+
+  /*Footer*/
+  #dokuwiki__footer {
+    padding: 5px;
   }
 
   /*GO TOP/BOTTOM*/
